--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "cybercog/youtrack-php-sdk": "^5.0",
+        "cybercog/youtrack-rest-php": "^8.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "livewire/flux": "^2.1.1",
         "livewire/volt": "^1.7.0",
         "mongodb/laravel-mongodb": "^5.4",
-        "mongodb/mongodb": "^2.1"
+        "mongodb/mongodb": "^2.1",
+        "spatie/laravel-navigation": "^1.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
